# sgutils

./: CMakeLists.txt  LICENSE  Makefile  README.md  sgutils.pc.in
examples/: example_drm.c  example_fb.c  example_offscreen.c
include/: compositing.h  draw.h  framebuffer.h  img-bmp.h  img-jpeg.h  img-png.h  img-svg.h  sgdrm.h  sgutils.h  text.h
man/: sgdrm-clear.1  sgdrm-composite.1  sgdrm-describe.1  sgdrm-pngdraw.1  sgdrm-text.1  sgfb-clear.1  sgfb-composite.1  sgfb-describe.1  sgfb-pngdraw.1  sgfb-text.1  sgfb-ttymode.1  sgutils.3  sgutils_compositing.3  sgutils_draw.3  sgutils_drm.3  sgutils_framebuffer.3  sgutils_img.3  sgutils_text.3
src/: compositing.c  draw.c  framebuffer.c  img-bmp.c  img-jpeg.c  img-png.c  img-svg.c  sgdrm-clear.c  sgdrm-composite.c  sgdrm-describe.c  sgdrm-imgdraw.c  sgdrm-text.c  sgdrm.c  sgfb-clear.c  sgfb-composite.c  sgfb-describe.c  sgfb-imgdraw.c  sgfb-text.c  sgfb-ttymode.c  text.c
